delete and add is working

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -30,7 +30,7 @@
           </li>
         
           <li class="nav-item">
-            <a class="btn btn-secondary nav-link" href="create">Create note +</a>
+            <a class="btn bg-warning nav-link" href="create">Create note +</a>
           </li>
         </ul>
         <form class="d-flex">
