--- a/views/Create.ejs
+++ b/views/Create.ejs
@@ -2,8 +2,12 @@
 <body>
   <div class="container mt-4">
     <div class="alert alert-dismissible alert-secondary">
-     <form action="/" method="post">
-        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+      <form action="/" method="post">
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="alert"
+        ></button>
         <div class="form-group">
           <label class="col-form-label mt-1" for="inputDefault"
             >Choose Date</label
@@ -16,7 +20,7 @@
             id="inputDefault"
           />
         </div>
-  
+
         <div class="row">
           <div class="col-8">
             <div class="form-group">
@@ -33,26 +37,38 @@
             </div>
           </div>
           <div class="col-sm-4">
-              <div class="form-group">
-                  <label for="exampleSelect1" class="form-label mt-4">Choose category</label>
-                  <select name="category" class="form-select" id="exampleSelect1">
-                   <% for(let cat of categories){ %>
-                    <option name="<%= cat %> " value="<%= cat %> "><%= cat %></option>
-                   <% } %>   
-                  </select>
-                </div>
-           
+            <div class="form-group">
+              <label for="exampleSelect1" class="form-label mt-4"
+                >Choose category</label
+              >
+              <select name="category" class="form-select" id="exampleSelect1">
+                <% for(let cat of categories){ %>
+                <option name="<%= cat %> " value="<%= cat %> ">
+                  <%= cat %>
+                </option>
+                <% } %>
+              </select>
+            </div>
           </div>
           <div class="container mt-4">
-              <div class="form-group">
-                  <label for="exampleTextarea" class="form-label mt-4">Write your Note</label>
-                  <textarea name="note" class="form-control" id="exampleTextarea" rows="3"></textarea>
-                </div>
-                <br>
-                <button type="submit" class="btn btn-outline-primary">Save Note</button>
+            <div class="form-group">
+              <label for="exampleTextarea" class="form-label mt-4"
+                >Write your Note</label
+              >
+              <textarea
+                name="note"
+                class="form-control"
+                id="exampleTextarea"
+                rows="3"
+              ></textarea>
+            </div>
+            <br />
+            <button type="submit" class="btn btn-outline-primary">
+              Save Note
+            </button>
           </div>
         </div>
-     </form>
+      </form>
     </div>
   </div>
 </body>
