--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,28 +3,44 @@
 <body>
   <div class="container p-2 mt-5">
     <div class="row">
-
       <% for (let i = 0; i< noteData.length; i++) { %>
 
-        <div class="col-md-3 dflex justify-content-center col-sm-3">
-            <div class="card bg-light mb-3" style="width: 100%">
-              <div class="card-header"><%= noteData[i].dateCreated %>  </div>
-                <div> <%= noteData.categories %></div>
-              <div class="card-body">
-                <h4 class="card-title"><%= noteData[i].createdBy %></h4>
-                <p class="card-text">
-                    <%= noteData[i].noteBody %>
+      <div class="col-md-3 dflex justify-content-center col-sm-3">
+        <div class="card bg-light mb-3" style="width: 100%">
+          <div class="card-header" name="date">
+            <%= noteData[i].dateCreated %> <br> <span><%= noteData[i]['category']  %> </span>
+          </div>
+          <div><%= noteData.categories %></div>
+          <div class="card-body">
+            <h4 class="card-title"><%= noteData[i].createdBy %></h4>
+            <p class="card-text"><%= noteData[i].noteBody %></p>
+            <hr class="dropdown-divider mb-3" />
+            <div class="container-fluid d-flex justify-content-around">
+              <form action="/delete" method="post">
+                <button
+                  id="delete"
+                  name="delBtn"
+                  type="submit"
+                  value="<%= noteData[i]._id %>"
+                  class="btn p-2 btn-outline-danger"
+                >
+                  Delete
+                </button>
+              </form>
 
-                </p>
-                  <hr class="dropdown-divider mb-3">
-                  <form action="/delete" method="post">
-                      <button  id="delete" name="delBtn" type="submit" value="<%= noteData[i]._id %>" class="btn p-2  btn-outline-danger">Delete</button>
-                  </form>
-              </div>
-
-
+              <form class="form-check-inline" action="/edit" method="post">
+                <button
+                  type="submit"
+                  name='<%= noteData[i].createdBy %>'
+                  class="btn p-2 btn-outline-success"
+                >
+                  Edit 📝
+                </button>
+              </form>
             </div>
+          </div>
         </div>
+      </div>
 
       <% } %>
     </div>
